--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,10 @@
-[] Commit hooks to sync with deduce? / Action
+[] Commit hooks to sync with deduce? / GH Action (My script is whack)
 
+[] Operators
 [] Semantic Tokens
-[] Actual rename?
+[] Actual renaming of variables
+  - Just run uniquify here? Would only work in the one file
+  - Also need the location of the thing we're renaming somehow
 
 [] Incremental Parsing
   - Currently reparses everything that comes after?
@@ -12,7 +15,6 @@
   - Parse statements from there
     - If possible, resync!
   
-[] Parsing imports
 
 Problem: What about deletion from front?
 i.e. Removing an import line?
